# api_next

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  test-report.json  test_job_system.py
.github/workflows/: test.yml
api_next/: hooks.py  modules.txt  setup_workspaces.py
api_next/api/: dashboard.py  job_management.py  job_workflow.py  job_workflow_advanced.py  job_workflow_docs.py  job_workflow_security.py  material_requisition.py
api_next/api_next/doctype/api_settings/: README.md  __init__.py  api_settings.js  api_settings.json  api_settings.py
api_next/fixtures/: custom_role.json  fixtures.json  page.json  roles_job_workflow.json  workflow_job_order.json
api_next/human_resources/doctype/employee/: employee.json  employee.py
api_next/job_management/: __init__.py
api_next/job_management/doctype/job_order/: job_order.json  job_order.py
api_next/job_management/doctype/job_order_labor/: __init__.py  job_order_labor.json  job_order_labor.py
api_next/job_management/doctype/job_order_material/: __init__.py  job_order_material.json  job_order_material.py
api_next/job_management/doctype/job_order_phase/: job_order_phase.json  job_order_phase.py
api_next/job_management/doctype/job_order_phase_history/: job_order_phase_history.json  job_order_phase_history.py
api_next/job_management/doctype/job_order_team/: job_order_team.json  job_order_team.py
api_next/job_management/doctype/job_order_workflow_history/: __init__.py  job_order_workflow_history.json  job_order_workflow_history.py
api_next/job_management/workflow/: __init__.py  job_order_workflow.py
api_next/materials_management/: notifications.py
api_next/materials_management/doctype/item/: __init__.py  item.json  item.py
api_next/materials_management/doctype/job_material_requisition/: job_material_requisition.json  job_material_requisition.py
api_next/materials_management/doctype/job_material_requisition_item/: job_material_requisition_item.json  job_material_requisition_item.py
api_next/materials_management/utils/: erpnext_integration.py
api_next/page/job_order_dashboard/: job_order_dashboard.html  job_order_dashboard.js  job_order_dashboard.json  job_order_dashboard.py
api_next/permissions/: README.md  __init__.py  field_permissions.py  role_manager.py  setup.py
api_next/permissions/tests/: __init__.py
api_next/public/css/: custom_branding.css  job_dashboard.css
api_next/public/images/: README.md
api_next/public/js/: job_material_requisition.js  job_material_requisition_list.js  job_order_workflow_dashboard.js
api_next/tests/: README_TEST_INFRASTRUCTURE.md  __init__.py  conftest.py  run_workflow_tests.py
api_next/tests/fixtures/: job_order_data.json
api_next/workflows/: README.md  __init__.py  business_rules_engine.py  job_order_workflow.py  notification_manager.py  setup_workflow.py
api_next/workspace/api_next/: api_next.json
api_next/workspace/job_management/: job_management.json
api_next/workspace/materials_management/: materials_management.json
api_next/workspace/resource_management/: resource_management.json
(+10 files in other folders)
